2007-07-06  Michael Stucki  <michael@typo3.org>

	* Fix in indexed search: List of indexed pages could be broken if mutli-byte chars are cut in the middle (patch by Karsten Dambekalns)

2007-07-02  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4623: Content encoding with x-gzip not possible in IE7
	* Fixed bug #5789: JS error in new content element wizard with a single item

2007-06-13  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5778: Missleading comment in TCEmain::copyRecord_procBasedOnFieldType()

2007-06-08  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5755: XCLASS inclusion part for class.t3lib_tceforms_inline.php is missing

2007-06-05  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #4226: New content elements wizard removes CE from array if tt_content_defValues property is zero

2007-05-23  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5564: IRRE - foreign_selector/foreign_unique on click issue

2007-05-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Added $GLOBALS['TYPO3_DB']->sql_free_result() to TCEmain::recordInfo() to avoid resource waste

2007-05-18  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5578: config setting SYS[requestURIvar] doesn't work

2007-05-12  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5074: IRRE - Hook processDatamap_afterDatabaseOperations executed early

2007-05-10  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fixed bug #209: require field URL in page-type "External URL"

2007-05-09  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #2052: Color picker does not work properly in flex forms. Thanks to David Bruehlmeier for providing a patch and a testcase.

2007-05-03  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5177: RTEhtmlarea not correctly displayed in IRRE child form-fields and tabs

2007-05-01  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #2515: jsfunc.validateform.js does not verify password fields (thanks to Joerg Wagner)