@@ -1,6 +1,7 @@
 2007-07-06  Michael Stucki  <michael@typo3.org>
 
 	* Fix in indexed search: List of indexed pages could be broken if mutli-byte chars are cut in the middle (patch by Karsten Dambekalns)
+	* Fixed bug #5094: Record alt_label was not processed (patch by Volker Graubaum and Thomas Hempel)
 
 2007-07-02  Oliver Hader  <oh@inpublica.de>
 
